--- a/src/level_data_appendix.tex
+++ b/src/level_data_appendix.tex
@@ -18,8 +18,8 @@ After CBM was over, I spruced up GENESYS and got it to the point where I could
   its various gauges and meters running.
 \end{definition}
 
-This section provides the level data for each wave of enemies in each
-planet. Figures are provided to indicate the appearance and movement
-pattern of the enemy.
+This section provides the level data for each wave of enemies\index{enemies} in each
+planet\index{planet}. Figures are provided to indicate the appearance and movement\index{movement}
+pattern\index{pattern} of the enemy.
 \subfile{level_data/level_data_appendix}
 
