--- a/src/sprite_appendix.tex
+++ b/src/sprite_appendix.tex
@@ -171,7 +171,7 @@
         \end{minipage}%
         \vspace{0.5cm}
     }%
-\caption{Sprites}
+\caption{Sprites\index{Sprites}}
 \end{figure}
 
 \begin{figure}[H]
@@ -222,7 +222,7 @@
         \end{minipage}%
         \vspace{0.5cm}
     }%
-\caption{Sprites}
+\caption{Sprites\index{Sprites}}
 \end{figure}
 
 \foreach \i [evaluate=\i as \h using {int(\i+4)},evaluate=\i as \g using {int(\i+19)}] in {160,180,...,220}
@@ -252,7 +252,7 @@
           \end{minipage}%
           \vspace{0.5cm}
       }%
-  \caption{Sprites}
+  \caption{Sprites\index{Sprites}}
   \end{figure}
 }
 
@@ -281,5 +281,5 @@
         \end{minipage}%
         \vspace{0.5cm}
     }%
-\caption{Sprites}
+\caption{Sprites\index{Sprites}}
 \end{figure}
