--- a/src/bonusphase.tex
+++ b/src/bonusphase.tex
@@ -9,12 +9,12 @@ This decidedly ropey mini-game has a few interesting features.
 \begin{figure}[H]
     \centering
       \includegraphics[width=10cm]{src/bonusphase/entry/bonus_entry_example.png}%
-\caption{The entry sequence.}
+\caption{The entry sequence\index{sequence}.}
 \end{figure}
 
-The entry sequence is an animated cascade of colored bars that appears to roll
-down from the top of the screen. You might assume we achieve this effect by simply
-drawing a series of colored text-based lines in a tight loop. Not the case:
+The entry sequence\index{sequence} is an animated cascade of colored bars that appears to roll
+down from the top of the screen\index{screen}. You might assume we achieve this effect by simply
+drawing\index{drawing} a series of colored text-based lines in a tight loop. Not the case:
 
 \begin{figure}[H]
     \centering
@@ -22,55 +22,55 @@ drawing a series of colored text-based lines in a tight loop. Not the case:
     {
       \includegraphics[width=2cm]{src/bonusphase/entry_fill/bonus_entry\l.png}%
     }%
-\caption{The entry effect filling the screen.}
+\caption{The entry effect filling the screen\index{screen}.}
 \end{figure}
 
-\begin{lstlisting}
-EnterBonusPhaseInterruptHandler   
+\begin{lstlisting}[escapechar=\%]
+EnterBonusPhaseInterruptHandler%\index{EnterBonusPhaseInterruptHandler}%   
         ...
-        LDY backgroundColorIndex
-        LDA enterBPRainbowColors,Y
+        LDY backgroundColorIndex%\index{backgroundColorIndex}%
+        LDA enterBPRainbowColors%\index{enterBPRainbowColors}%,Y
         STA $D021    ;Background Color 0
 \end{lstlisting}
 
-What we actually do is update the screen's background color as the raster travels
-down the screen. The above three lines do this about 30 times every single paint
-of the screen, updating the background color that gets painted as we go. The result
-is that each colored bar reflects the background color of the screen at the time
-the raster is passing it. The trick is to keep updating the background color at
+What we actually do is update the screen\index{screen}'s background\index{background} color as the raster travels
+down the screen\index{screen}. The above three lines do this about 30 times every single paint
+of the screen\index{screen}, updating the background\index{background} color that gets painted\index{painted} as we go. The result
+is that each colored bar reflects the background\index{background} color of the screen\index{screen} at the time
+the raster is passing it. The trick is to keep updating the background\index{background} color at
 gradually increasing intervals.
 
-After we update the background color we set the raster interrupt to the next position
+After we update the background\index{background} color we set the raster interrupt\index{interrupt} to the next position
 we're interested in:
 
-\begin{lstlisting}
-EnterBonusPhaseInterruptHandler   
+\begin{lstlisting}[escapechar=\%]
+EnterBonusPhaseInterruptHandler%\index{EnterBonusPhaseInterruptHandler}%   
         ...
-        LDY backgroundColorIndex
-        LDA enterBPRainbowColors,Y
+        LDY backgroundColorIndex%\index{backgroundColorIndex}%
+        LDA enterBPRainbowColors%\index{enterBPRainbowColors}%,Y
         STA $D021    ;Background Color 0
 
-        ; Check if we've reached the end of the rainbow effect.
-        LDA bpRasterPositionArray,Y
+        ; Check if we've reached the end of the rainbow%\index{rainbow}% effect.
+        LDA bpRasterPositionArray%\index{bpRasterPositionArray}%,Y
         ...
-        ; Update the position of the next interrupt.
+        ; Update the position of the next interrupt%\index{interrupt}%.
         CLC 
         ADC $D012    ;Raster Position
         STA $D012    ;Raster Position
 \end{lstlisting}
 
-The value we get from \icode{bpRasterPositionArray} reflects our intention of painting
+The value we get from \icode{bpRasterPositionArray\index{bpRasterPositionArray}} reflects our intention of painting
 increasingly tall bars:
 
-\begin{lstlisting}
-bpRasterPositionArray     .BYTE $01,$01,$01,$01,$02,$02,$02,$02
+\begin{lstlisting}[escapechar=\%]
+bpRasterPositionArray%\index{bpRasterPositionArray}%     .BYTE $01,$01,$01,$01,$02,$02,$02,$02
                           .BYTE $03,$03,$03,$03,$04,$04,$04,$04
                           .BYTE $05,$05,$05,$05,$06,$06,$06,$06
                           .BYTE $07,$07,$07,$07,$07,$07,$00
 \end{lstlisting}
 
-Each value in here gets added to the current \index{raster} interrupt position (\icode{ADC \$D012}).
-The further we go down the screen the taller the bars become.
+Each value in here gets added to the current \index{raster} interrupt\index{interrupt} position (\icode{ADC \$D012}).
+The further we go down the screen\index{screen} the taller the bars become.
 
 \begin{figure}[H]
     \centering
@@ -78,46 +78,46 @@ The further we go down the screen the taller the bars become.
     {
       \includegraphics[width=6.5cm]{bonusphase/entry/bonus_entry\l.png}%
     }%
-  \caption{Updating the background color at a 5 line interval as given by \icode{bpRasterPositionArray}.}
+  \caption{Updating the background\index{background} color at a 5 line interval as given by \icode{bpRasterPositionArray\index{bpRasterPositionArray}}.}
 \end{figure}
 
-In addition to drawing incrementally larger bars we're also shifting down by one row the color each one is painted
+In addition to drawing\index{drawing} incrementally larger bars we're also shifting\index{shifting} down by one row the color each one is painted\index{painted}
 at each pass. This is responsible for creating the visual effect of each bar moving independently
-down the screen.
+down the screen\index{screen}.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=6.5cm]{bonusphase/entry/bonus_entry_from.png}%
     \includegraphics[width=6.5cm]{bonusphase/entry/bonus_entry_to.png}%
-  \caption{The color sequences shifts down one position after each full screen paint.}
+  \caption{The color sequences shifts down one position after each full screen\index{screen} paint.}
 \end{figure}
 
 This is managed by an array..
 
-\begin{lstlisting}
-entryScreenRainbowColors
+\begin{lstlisting}[escapechar=\%]
+entryScreenRainbowColors%\index{entryScreenRainbowColors}%
       .BYTE RED,ORANGE,YELLOW,GREEN,LTBLUE,PURPLE,BLUE,YELLOW
       .BYTE BLACK,CYAN,BLACK,GREEN,BLACK,PURPLE,BLACK,RED
       .BYTE BLACK,BLUE,BLACK,BLUE,BLACK,BLUE,PURPLE,LTBLUE
       .BYTE GREEN,YELLOW,ORANGE,RED
 \end{lstlisting}
 
-.. referenced in \icode{UpdateEntryScreenRainbow}. After every full screen paint we update the an
-array \icode{previousRoundRainbowColors} to store the position of the previous bar that used it.
-This allows us to use \icode{previousRoundRainbowColors} as a source for \icode{X} the next time
-we finish a screen and shift the colors along by one position:
+.. referenced in \icode{UpdateEntryScreenRainbow\index{UpdateEntryScreenRainbow}}. After every full screen\index{screen} paint we update the an
+array \icode{previousRoundRainbowColors\index{previousRoundRainbowColors}} to store the position of the previous bar that used it.
+This allows us to use \icode{previousRoundRainbowColors\index{previousRoundRainbowColors}} as a source for \icode{X} the next time
+we finish a screen\index{screen} and shift the colors along by one position:
 
-\begin{lstlisting}
-UpdateEntryScreenRainbow   
+\begin{lstlisting}[escapechar=\%]
+UpdateEntryScreenRainbow%\index{UpdateEntryScreenRainbow}%   
         ...
-        LDA entryScreenRainbowColors,X
-        STA enterBPRainbowColors,Y
+        LDA entryScreenRainbowColors%\index{entryScreenRainbowColors}%,X
+        STA enterBPRainbowColors%\index{enterBPRainbowColors}%,Y
         TYA 
-        STA previousRoundRainbowColors,X
+        STA previousRoundRainbowColors%\index{previousRoundRainbowColors}%,X
 \end{lstlisting}
 
 All in all, this is a neat effect and would only have been possible at the speeds achieved by using
-the raster interrupt in this way. Simply painting the screen with colored text would have been much
+the raster interrupt\index{interrupt} in this way. Simply painting the screen\index{screen} with colored text would have been much
 slower.
 
 \section{Generating Maps}
@@ -126,7 +126,7 @@ slower.
       \includegraphics[width=10cm]{src/bonusphase/bonus_phase.png}%
 \caption{The beginning of the first bonus phase.}
 \end{figure}
-Every time the player enters the bonus phase we'll procedurally generate a 
+Every time the player enters the bonus phase we'll procedurally\index{procedurally} generate a 
 new map. The way we'll manage this is by treating the map a stack of 
 256 rows and defining our map simply as an array of the rows that 
 make up the map.
@@ -147,8 +147,8 @@ way of example, this is what the array that defines the map for the
 first bonus phase round looks like:
 
 
-\begin{lstlisting}
-bonusPhaseMapDefinition 
+\begin{lstlisting}[escapechar=\%]
+bonusPhaseMapDefinition%\index{bonusPhaseMapDefinition}% 
     .BYTE $00,$00,$00,$00,$00,$00,$00,$00,$00,$00
     .BYTE $11,$11,$11,$11,$11,$11,$11,$11,$11,$11
     .BYTE $11,$11,$11,$11,$11,$11,$11,$11,$11,$11
@@ -179,14 +179,14 @@ bonusPhaseMapDefinition
 
 This map definition starts from the bottom up, it does this because we
 are scrolling upward so it makes sense to begin with what the player
-will see first. The start of the map is a simple sequence of zeroes:
+will see first. The start of the map is a simple sequence\index{sequence} of zeroes:
 
-\begin{lstlisting}
-bonusPhaseMapDefinition 
+\begin{lstlisting}[escapechar=\%]
+bonusPhaseMapDefinition%\index{bonusPhaseMapDefinition}% 
     .BYTE $00,$00,$00,$00,$00,$00,$00,$00,$00,$00
 \end{lstlisting}
 
-This is the row image each line translates to, a regular square pattern
+This is the row image each line translates to, a regular square pattern\index{pattern}
 initially followed by rows with some other features.
 
 \begin{figure}[H]
@@ -231,8 +231,8 @@ initially followed by rows with some other features.
 Further along in the definition we reach a segment where some new features
 are introduced.
 
-\begin{lstlisting}
-bonusPhaseMapDefinition 
+\begin{lstlisting}[escapechar=\%]
+bonusPhaseMapDefinition%\index{bonusPhaseMapDefinition}% 
     .BYTE $11,$11,$11,$11,$11,$11,$11,$11,$11,$11
     .BYTE $15,$16,$16,$16,$16,$16,$16,$16,$16,$17
 \end{lstlisting}
@@ -277,7 +277,7 @@ map them to their corresponding images:
 \end{figure}
 
 So how do we get from a value like \icode{\$15} to an image that represents
-a row on the screen? 
+a row on the screen\index{screen}? 
 
 \begin{figure}[H]
   {
@@ -300,10 +300,10 @@ a row on the screen?
 We do this by defining each row with yet another array
 of bytes. In all we define 32 rows of different types so when we come up
 with a map for the level we are simply referencing each of these rows by their
-index in the array. Here is the data structure defining each of the 32 rows:
+index in the array. Here is the data structure\index{structure} defining each of the 32 rows:
 
-\begin{lstlisting}[basicstyle=\tiny]
-bonusPhaseMapRowDefinitions   
+\begin{lstlisting}[basicstyle=\tiny,escapechar=\%]
+bonusPhaseMapRowDefinitions%\index{bonusPhaseMapRowDefinitions}%   
         .BYTE $00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00,$00 ; 00
         .BYTE $0D,$0D,$0E,$0E,$0E,$0E,$0E,$00,$00,$0B,$0B,$00,$00,$0D,$0D,$0D,$0D,$0D,$0E,$0E 
         .BYTE $10,$0B,$0B,$0B,$0B,$0B,$0B,$0B,$0B,$11,$10,$0B,$0B,$0B,$0B,$0B,$0B,$0B,$0B,$11
@@ -339,10 +339,10 @@ bonusPhaseMapRowDefinitions
         .BYTE $0A,$0A,$0A,$0A,$0A,$0A,$0A,$0A,$0A,$15,$15,$0A,$0A,$0A,$0A,$0A,$0A,$0A,$0A,$0A
 \end{lstlisting}
 
-The one at index \icode{\$15} (21 in decimal) is this guy:
+The one at index \icode{\$15} (21 in decimal\index{decimal}) is this guy:
 
-\begin{lstlisting}[basicstyle=\tiny]
-bonusPhaseMapRowDefinitions   
+\begin{lstlisting}[basicstyle=\tiny,escapechar=\%]
+bonusPhaseMapRowDefinitions%\index{bonusPhaseMapRowDefinitions}%   
         .BYTE $00,$10,$0B,$11,$00,$00,$10,$0B,$11,$00,$00,$10,$0B,$11,$00,$00,$10,$0B,$11,$00
 \end{lstlisting}
 
@@ -392,8 +392,8 @@ And the first five bytes (which are repeated four times to complete the full row
 So how do we go from a single byte like \icode{\$00} to a four-byte square? Would you be surprised
 if I told you it involved another array of bytes? In fact it involves two arrays of bytes.
 
-\begin{lstlisting}
-cellFirstColumnArray
+\begin{lstlisting}[escapechar=\%]
+cellFirstColumnArray%\index{cellFirstColumnArray}%
         .BYTE $40,$41,$44,$47,$48,$49,$4F,$4D
         .BYTE $50,$51,$54,$56,$5B,$59,$5C,$5D
         .BYTE $60,$61,$64,$65,$68,$69,$47,$47
@@ -401,7 +401,7 @@ cellFirstColumnArray
         .BYTE $5D,$45,$4B,$47,$4C,$5D,$4E,$52
         .BYTE $7C,$7D,$6C,$6D,$70,$71,$74,$75
         .BYTE $78,$79
-cellSecondColumnArray   
+cellSecondColumnArray%\index{cellSecondColumnArray}%   
         .BYTE $42,$43,$46,$47,$4A,$48,$4E,$4F
         .BYTE $51,$53,$56,$57,$5A,$5B,$5E,$5C
         .BYTE $61,$63,$66,$67,$6A,$6B,$47,$47
@@ -427,14 +427,14 @@ points us to the first byte in each. However we're not interested in just the fi
 but the first two. So the bytes that we will use to construct the 4-byte square are:
 
 
-\begin{lstlisting}
-cellFirstColumnArray
+\begin{lstlisting}[escapechar=\%]
+cellFirstColumnArray%\index{cellFirstColumnArray}%
         .BYTE $40,$41
-cellSecondColumnArray   
+cellSecondColumnArray%\index{cellSecondColumnArray}%   
         .BYTE $42,$43
 \end{lstlisting}
 
-Each of these bytes is a reference to a byte in the bonus phase character set. When we set out the
+Each of these bytes is a reference to a byte in the bonus phase character\index{character} set. When we set out the
 characters in a table as they are eventually laid out we begin to get a sense of what we must do
 to turn them into our 4-byte cell:
 
@@ -461,27 +461,27 @@ to turn them into our 4-byte cell:
   }\caption[]{Characters making up the four-byte cell referenced by \icode{\$00}.}
 \end{figure}
 
-What we have done is take the two values at index \icode{\$00} in \icode{cellFirstColumnArray}
+What we have done is take the two values at index \icode{\$00} in \icode{cellFirstColumnArray\index{cellFirstColumnArray}}
 and used each as the first column across two rows. Then we've taken the two values from
-\icode{cellSecondColumnArray} and used them as the second column across two rows. 
+\icode{cellSecondColumnArray\index{cellSecondColumnArray}} and used them as the second column across two rows. 
 
 Let's repeat this process for the values given by index \icode{\$10} highlighted in red. 
 
-\begin{lstlisting}
-cellFirstColumnArray
+\begin{lstlisting}[escapechar=\%]
+cellFirstColumnArray%\index{cellFirstColumnArray}%
         .BYTE $40,$41,$44,$47,$48,$49,$4F,$4D
         .BYTE $50,$51,$54,$56,$5B,$59,$5C,$5D
         .BYTE $60,$61,$64,$65,$68,$69,$47,$47
         ...
-cellSecondColumnArray   
+cellSecondColumnArray%\index{cellSecondColumnArray}%   
         .BYTE $42,$43,$46,$47,$4A,$48,$4E,$4F
         .BYTE $51,$53,$56,$57,$5A,$5B,$5E,$5C
         .BYTE $61,$63,$66,$67,$6A,$6B,$47,$47
         ...
 \end{lstlisting}
 
-The values at index \icode{\$10} in \icode{cellFirstColumnArray} are \icode{\$60,\$61} and
-in \icode{cellSecondColumnArray} are \icode{\$61,\$63}. Translated to row and column position
+The values at index \icode{\$10} in \icode{cellFirstColumnArray\index{cellFirstColumnArray}} are \icode{\$60,\$61} and
+in \icode{cellSecondColumnArray\index{cellSecondColumnArray}} are \icode{\$61,\$63}. Translated to row and column position
 this gives:
 
 \begin{figure}[H]                          
@@ -527,119 +527,119 @@ in the row:
   }
 \end{figure}
 
-The code that looks after all this is a routine we call \icode{BonusPhaseFillTopLineAfterScrollUp}
+The code that looks after all this is a routine\index{routine} we call \icode{BonusPhaseFillTopLineAfterScrollUp\index{BonusPhaseFillTopLineAfterScrollUp}}
 which is called every time the player scrolls up. There's an equivalent \\
-\icode{BonusPhaseFillBottomLineAfterScrollDown}
+\icode{BonusPhaseFillBottomLineAfterScrollDown\index{BonusPhaseFillBottomLineAfterScrollDown}}
 for when the player scrolls down. They're nearly identical.
 
 \begin{minipage}[b]{0.45\linewidth}
 \centering
-\begin{lstlisting}[basicstyle=\tiny]
-BonusPhaseFillTopLineAfterScrollUp   
-        LDX offsetForScrollUp
-        LDY bonusPhaseMapDefinition,X
-        LDA bonusPhaseMapLoPtrArray,Y
-        STA bonusPhaseMapLoPtr
-        LDA bonusPhaseMapHiPtrArray,Y
-        STA bonusPhaseMapHiPtr
+\begin{lstlisting}[basicstyle=\tiny,escapechar=\%]
+BonusPhaseFillTopLineAfterScrollUp%\index{BonusPhaseFillTopLineAfterScrollUp}%   
+        LDX offsetForScrollUp%\index{offsetForScrollUp}%
+        LDY bonusPhaseMapDefinition%\index{bonusPhaseMapDefinition}%,X
+        LDA bonusPhaseMapLoPtrArray%\index{bonusPhaseMapLoPtrArray}%,Y
+        STA bonusPhaseMapLoPtr%\index{bonusPhaseMapLoPtr}%
+        LDA bonusPhaseMapHiPtrArray%\index{bonusPhaseMapHiPtrArray}%,Y
+        STA bonusPhaseMapHiPtr%\index{bonusPhaseMapHiPtr}%
 
         LDY #$00
         LDX #$00
 FillRowLoop
-        LDA (bonusPhaseMapLoPtr),Y
-        STY mapOffsetTemp
+        LDA (bonusPhaseMapLoPtr%\index{bonusPhaseMapLoPtr}%),Y
+        STY mapOffsetTemp%\index{mapOffsetTemp}%
         ASL 
         CLC 
-        ADC scrollLineOffset
+        ADC scrollLineOffset%\index{scrollLineOffset}%
         TAY 
-        LDA cellFirstColumnArray,Y
-        STA SCREEN_RAM,X
-        LDA cellSecondColumnArray,Y
-        STA SCREEN_RAM + LINE0_COL1,X
-        LDY mapOffsetTemp
+        LDA cellFirstColumnArray%\index{cellFirstColumnArray}%,Y
+        STA SCREEN_RAM%\index{SCREEN\_RAM}%,X
+        LDA cellSecondColumnArray%\index{cellSecondColumnArray}%,Y
+        STA SCREEN_RAM%\index{SCREEN\_RAM}% + LINE0_COL1%\index{LINE0\_COL1}%,X
+        LDY mapOffsetTemp%\index{mapOffsetTemp}%
         INX 
         INX 
         INY 
         CPY #$14
         BNE FillRowLoop
 
-        LDA scrollLineOffset
-        BNE ReturnEarly
+        LDA scrollLineOffset%\index{scrollLineOffset}%
+        BNE ReturnEarly%\index{ReturnEarly}%
 
-        INC offsetForScrollUp
-        INC offsetForScrollDown
-ReturnEarly
+        INC offsetForScrollUp%\index{offsetForScrollUp}%
+        INC offsetForScrollDown%\index{offsetForScrollDown}%
+ReturnEarly%\index{ReturnEarly}%
         RTS 
 \end{lstlisting}
 \end{minipage}
 \hspace{0.5cm}
 \begin{minipage}[b]{0.45\linewidth}
 \centering
-\begin{lstlisting}[basicstyle=\tiny]
-BonusPhaseFillBottomLineAfterScrollDown   
-        LDX offsetForScrollDown
-        LDY bonusPhaseMapDefinition,X
-        LDA bonusPhaseMapLoPtrArray,Y
-        STA bonusPhaseMapLoPtr
-        LDA bonusPhaseMapHiPtrArray,Y
-        STA bonusPhaseMapHiPtr
+\begin{lstlisting}[basicstyle=\tiny,escapechar=\%]
+BonusPhaseFillBottomLineAfterScrollDown%\index{BonusPhaseFillBottomLineAfterScrollDown}%   
+        LDX offsetForScrollDown%\index{offsetForScrollDown}%
+        LDY bonusPhaseMapDefinition%\index{bonusPhaseMapDefinition}%,X
+        LDA bonusPhaseMapLoPtrArray%\index{bonusPhaseMapLoPtrArray}%,Y
+        STA bonusPhaseMapLoPtr%\index{bonusPhaseMapLoPtr}%
+        LDA bonusPhaseMapHiPtrArray%\index{bonusPhaseMapHiPtrArray}%,Y
+        STA bonusPhaseMapHiPtr%\index{bonusPhaseMapHiPtr}%
 
         LDY #$00
         LDX #$00
 FillRowLoop
-        LDA (bonusPhaseMapLoPtr),Y
-        STY mapOffsetTemp
+        LDA (bonusPhaseMapLoPtr%\index{bonusPhaseMapLoPtr}%),Y
+        STY mapOffsetTemp%\index{mapOffsetTemp}%
         ASL 
         CLC 
-        ADC scrollLineOffset
+        ADC scrollLineOffset%\index{scrollLineOffset}%
         TAY 
-        LDA cellFirstColumnArray,Y
-        STA SCREEN_RAM + LINE18_COL0,X
-        LDA cellSecondColumnArray,Y
-        STA SCREEN_RAM + LINE18_COL1,X
-        LDY mapOffsetTemp
+        LDA cellFirstColumnArray%\index{cellFirstColumnArray}%,Y
+        STA SCREEN_RAM%\index{SCREEN\_RAM}% + LINE18_COL0%\index{LINE18\_COL0}%,X
+        LDA cellSecondColumnArray%\index{cellSecondColumnArray}%,Y
+        STA SCREEN_RAM%\index{SCREEN\_RAM}% + LINE18_COL1%\index{LINE18\_COL1}%,X
+        LDY mapOffsetTemp%\index{mapOffsetTemp}%
         INX 
         INX 
         INY 
         CPY #$14
         BNE FillRowLoop
 
-        LDA scrollLineOffset
+        LDA scrollLineOffset%\index{scrollLineOffset}%
         BEQ FillRowLoop
 
-        DEC offsetForScrollDown
-        DEC offsetForScrollUp
-        LDA offsetForScrollDown
+        DEC offsetForScrollDown%\index{offsetForScrollDown}%
+        DEC offsetForScrollUp%\index{offsetForScrollUp}%
+        LDA offsetForScrollDown%\index{offsetForScrollDown}%
         CMP #$FF
-        BNE ReturnEarly
+        BNE ReturnEarly%\index{ReturnEarly}%
 
         LDA #$00
-        STA offsetForScrollDown
+        STA offsetForScrollDown%\index{offsetForScrollDown}%
         LDA #$0A
-        STA offsetForScrollUp
-ReturnEarly
+        STA offsetForScrollUp%\index{offsetForScrollUp}%
+ReturnEarly%\index{ReturnEarly}%
         RTS 
 \end{lstlisting}
 \end{minipage}
 
-The thing to note about this routine is that it only fills one actual line of characters
+The thing to note about this routine\index{routine} is that it only fills one actual line of characters
 at a time, whereas as the 'rows' we've defined are two lines deep. It decides which of the
-two lines its writing by using the \icode{scrollLineOffset} variable to determine which
+two lines its writing by using the \icode{scrollLineOffset\index{scrollLineOffset}} variable to determine which
 one its writing.
 
 \subsection{Choosing a Map}
 So now that we understand how the individual rows of the map are generated, the question
-arises: how do we procedurally generate entire maps? Do we just pick random rows and 
+arises: how do we procedurally\index{procedurally} generate entire maps? Do we just pick random rows and 
 join them together? This wouldn't work well, since some rows aren't going to go well
 together. The solution is to define entire map segments using the building blocks above
 and let those be the building blocks we use when constructing an entire map.
 
 If we look at our definition for the first bonus phase  again we can see it consists of arrays of 10 bytes with
 each 10-byte array corresponding to a segment in the map and each byte in the array corresponding to a row in the map. 
-So each 10-byte array below gives us a full 20 byte high screen of map data.
+So each 10-byte array below gives us a full 20 byte high screen\index{screen} of map data.
 
-\begin{lstlisting}
-bonusPhaseMapDefinition 
+\begin{lstlisting}[escapechar=\%]
+bonusPhaseMapDefinition%\index{bonusPhaseMapDefinition}% 
     .BYTE $00,$00,$00,$00,$00,$00,$00,$00,$00,$00
     .BYTE $11,$11,$11,$11,$11,$11,$11,$11,$11,$11
     .BYTE $11,$11,$11,$11,$11,$11,$11,$11,$11,$11
@@ -669,11 +669,11 @@ bonusPhaseMapDefinition
 \end{lstlisting}
 
 The trick is that these segments aren't themselves
-generated procedurally, we defined them in advance.  We did this in \icode{bonusMapSegmentArray}
+generated procedurally\index{procedurally}, we defined them in advance.  We did this in \icode{bonusMapSegmentArray\index{bonusMapSegmentArray}}
 given below. We've highlighted the segments used in our map in red:
 
-\begin{lstlisting}
-bonusMapSegmentArray
+\begin{lstlisting}[escapechar=\%]
+bonusMapSegmentArray%\index{bonusMapSegmentArray}%
         .BYTE $00,$00,$00,$00,$00,$00,$00,$00,$00,$00
         .BYTE $00,$15,$16,$17,$00,$00,$15,$16,$17,$00
         .BYTE $00,$14,$14,$14,$14,$14,$14,$14,$14,$00
@@ -759,7 +759,7 @@ pseudo-random order and stacking them on top of one another!
 
 
 
-\section{Some Very Ugly Sprites}
+\section{Some Very Ugly Sprites\index{Sprites}}
 For some reason the gilby sprite in the bonus phase is made impossibly ugly.
 
 \begin{figure}[H]
