--- a/src/preface.tex
+++ b/src/preface.tex
@@ -3,7 +3,7 @@ This book describes the inner workings of a relatively obscure video game create
 by an eccentric Englishman by the name of Jeff Minter in 1986 for the Commodore 64.
 
 If you are curious about old computers such as the Commodore 64 or the detailed mechanics
-of making a glorified digital breadboard produce something on a screen that flashes, bleeps,
+of making a glorified digital breadboard produce something on a screen\index{screen} that flashes, bleeps,
 and fascinates then this book is hopefully for you. Iridis Alpha was not an enormous success on its release
 but it is widely regarded as one of the great achievements on the Commodore 64 hardware. It embodies an 8-bit arcade aesthetic that was
 unique to its time, it was slightly mad in its concept and execution, and its emphasis on speed and unforgiving gameplay influenced
@@ -18,24 +18,24 @@ tape it was originally distributed. \hyperref[sec:dis]{\textcolor{blue}{Some Dis
 a very long list of bytes to a full source code listing. Hopefully you are here because you enjoy this kind of gory detail too.
 
 If you are just interested in learning about the mechanics of the game itself you can flick straight to \hyperref[sec:first16]{\textcolor{blue}{The First 16 Milliseconds}}, 
-which begins by covering the loading the title screen and all that goes on in there. \hyperref[sec:planets]{\textcolor{blue}{Making Planets for Nigel}},
+which begins by covering the loading the title screen\index{screen} and all that goes on in there. \hyperref[sec:planets]{\textcolor{blue}{Making Planets for Nigel}},
 \hyperref[sec:blast]{\textcolor{blue}{Blasting Fast and Slow}}, and \hyperref[sec:level]{\textcolor{blue}{Enemies and Their Discontents}} cover the main gameplay
 and dive into how the game levels are created and how the speed of the game is achieved. These chapters go deep into the game's reassembled code and look closely at how
 Jeff Minter designed its core engine.
 
-I dedicate a full chapter \hyperref[sec:first16]{\textcolor{blue}{A Hundred Thousand Billion Theme Tunes}} to the ingenious procedural programming behind Iridis Alpha's theme
+I dedicate a full chapter \hyperref[sec:first16]{\textcolor{blue}{A Hundred Thousand Billion Theme Tunes}} to the ingenious procedural\index{procedural} programming behind Iridis Alpha's theme
 tunes and trace its inspiration back to an article 'Musical Fractals' in a 1986 issue of Byte magazine. \hyperref[sec:torusmusic]{\textcolor{blue}{Another 16\textsuperscript{4} Tunes}} looks
 at the early expermentiations with this fractal music in the demo 'Torus' Minter released while developing the game. \hyperref[sec:torus]{\textcolor{blue}{An Oscillator in 4 Parts}} delves
-into the animation experiment in 'Torus', something that was used in the bonus screen in Iridis Alpha itself.
+into the animation\index{animation} experiment in 'Torus', something that was used in the bonus screen\index{screen} in Iridis Alpha itself.
 
 Iridis Alpha is full of little additional extras. \hyperref[sec:bonus]{\textcolor{blue}{Congoatulations Hotshot!}} unpacks the vertical
-scrolling mini-game Minter inserted as a bonus sequence. Even if the game itself is a little half-baked this bonus sequence is full of intrepid effects and some clever techniques
+scrolling mini-game Minter inserted as a bonus sequence\index{sequence}. Even if the game itself is a little half-baked this bonus sequence\index{sequence} is full of intrepid effects and some clever techniques
 for generating the game maps. \hyperref[sec:mif]{\textcolor{blue}{Made in France}} and \hyperref[sec:dna]{\textcolor{blue}{A Pause Mode for Your Pause Mode}} unpick the pause mode games
 bundled with the main game.
 
 As a final coda, \hyperref[sec:bugs]{\textcolor{blue}{Iridis Oops!}} takes a look at some of the bugs that slipped through to the final release. 
 
-If you are reading the PDF version of this book the \hyperref[sec:appendices]{\textcolor{blue}{Appendices}} contain a data dump of sprite sheets, character sets, maps and tables that 
+If you are reading the PDF version of this book the \hyperref[sec:appendices]{\textcolor{blue}{Appendices}} contain a data dump of sprite sheets, character\index{character} sets, maps and tables that 
 should provide hours of rewarding bedtime reading, or more likely, deep undisturbed sleep.
 
 \section*{Note on the Text}
